kcompiler/src/main/java/org/metavm/compiler/antlr/KiwiParser.java
// Generated from KiwiParser.g4 by ANTLR 4.13.2
package org.metavm.compiler.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class KiwiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ABSTRACT=1, BOOL=2, CASE=3, DEFAULT=4, CATCH=5, STRING=6, CLASS=7, BEAN=8, 
		NULL=9, PACKAGE=10, IMPORT=11, PASSWORD=12, FLOAT=13, DOUBLE=14, ELSE=15, 
		ENUM=16, FINALLY=17, FOR=18, IF=19, IS=20, BYTE=21, SHORT=22, INT=23, 
		LONG=24, CHAR=25, INTERFACE=26, NATIVE=27, NEW=28, PRIV=29, PROT=30, PUB=31, 
		RETURN=32, STATIC=33, SUPER=34, SWITCH=35, THIS=36, THROW=37, TIME=38, 
		THROWS=39, TRY=40, VOID=41, WHILE=42, DO=43, ANY=44, NEVER=45, DELETED=46, 
		FN=47, VALUE=48, VAL=49, VAR=50, AS=51, IN=52, CONTINUE=53, BREAK=54, 
		TEMP=55, ASSIGN=56, GT=57, LT=58, BANG=59, BANGBANG=60, TILDE=61, QUESTION=62, 
		COLON=63, EQUAL=64, LE=65, GE=66, NOTEQUAL=67, AND=68, OR=69, INC=70, 
		DEC=71, ADD=72, SUB=73, MUL=74, DIV=75, BITAND=76, BITOR=77, CARET=78, 
		MOD=79, ADD_ASSIGN=80, SUB_ASSIGN=81, MUL_ASSIGN=82, DIV_ASSIGN=83, AND_ASSIGN=84, 
		OR_ASSIGN=85, XOR_ASSIGN=86, MOD_ASSIGN=87, LSHIFT_ASSIGN=88, RSHIFT_ASSIGN=89, 
		URSHIFT_ASSIGN=90, LPAREN=91, RPAREN=92, LBRACE=93, RBRACE=94, LBRACK=95, 
		RBRACK=96, SEMI=97, COMMA=98, DOT=99, ARROW=100, COLONCOLON=101, AT=102, 
		ELLIPSIS=103, DECIMAL_LITERAL=104, HEX_LITERAL=105, OCT_LITERAL=106, BINARY_LITERAL=107, 
		FLOAT_LITERAL=108, HEX_FLOAT_LITERAL=109, BOOL_LITERAL=110, CHAR_LITERAL=111, 
		STRING_LITERAL=112, TEXT_BLOCK=113, R=114, RW=115, IDENTIFIER=116, WS=117, 
		COMMENT=118, LINE_COMMENT=119;
	public static final int
		RULE_compilationUnit = 0, RULE_packageDeclaration = 1, RULE_importDeclaration = 2, 
		RULE_topLevTypeDecl = 3, RULE_typeDeclaration = 4, RULE_classDeclaration = 5, 
		RULE_initParameter = 6, RULE_classBody = 7, RULE_typeList = 8, RULE_classBodyDeclaration = 9, 
		RULE_staticBlock = 10, RULE_enumDeclaration = 11, RULE_enumConstants = 12, 
		RULE_enumConstant = 13, RULE_enumBodyDeclarations = 14, RULE_interfaceDeclaration = 15, 
		RULE_interfaceBody = 16, RULE_interfaceBodyDeclaration = 17, RULE_interfaceMemberDeclaration = 18, 
		RULE_interfaceMethodDeclaration = 19, RULE_interfaceMethodModifier = 20, 
		RULE_memberDeclaration = 21, RULE_fieldDeclaration = 22, RULE_methodDeclaration = 23, 
		RULE_typeParameters = 24, RULE_qualifiedNameList = 25, RULE_qualifiedName = 26, 
		RULE_typeParameter = 27, RULE_formalParameters = 28, RULE_formalParameterList = 29, 
		RULE_formalParameter = 30, RULE_methodBody = 31, RULE_block = 32, RULE_statement = 33, 
		RULE_localVariableDeclaration = 34, RULE_forControl = 35, RULE_loopVariable = 36, 
		RULE_loopVariableDeclarators = 37, RULE_loopVariableDeclarator = 38, RULE_loopVariableUpdates = 39, 
		RULE_loopVariableUpdate = 40, RULE_anonClassExpr = 41, RULE_newArray = 42, 
		RULE_arrayInitializer = 43, RULE_variableInitializer = 44, RULE_catchClause = 45, 
		RULE_catchFields = 46, RULE_catchField = 47, RULE_catchValue = 48, RULE_branchCase = 49, 
		RULE_switchLabel = 50, RULE_parExpression = 51, RULE_expressionList = 52, 
		RULE_expression = 53, RULE_assignment = 54, RULE_assignmentSuffix = 55, 
		RULE_ternary = 56, RULE_disjunction = 57, RULE_conjunction = 58, RULE_range = 59, 
		RULE_bitor = 60, RULE_bitand = 61, RULE_bitxor = 62, RULE_equality = 63, 
		RULE_equalitySuffix = 64, RULE_relational = 65, RULE_relationalSuffix = 66, 
		RULE_isExpr = 67, RULE_isSuffix = 68, RULE_typePtn = 69, RULE_shift = 70, 
		RULE_shiftSuffix = 71, RULE_additive = 72, RULE_additiveSuffix = 73, RULE_multiplicative = 74, 
		RULE_multiplicativeSuffix = 75, RULE_asExpr = 76, RULE_prefixExpr = 77, 
		RULE_prefixOp = 78, RULE_postfixExpr = 79, RULE_postfixSuffix = 80, RULE_callSuffix = 81, 
		RULE_indexingSuffix = 82, RULE_selectorSuffix = 83, RULE_primaryExpr = 84, 
		RULE_arguments = 85, RULE_identifier = 86, RULE_literal = 87, RULE_integerLiteral = 88, 
		RULE_floatLiteral = 89, RULE_typeOrVoid = 90, RULE_type = 91, RULE_unionType = 92, 
		RULE_intersectionType = 93, RULE_postfixType = 94, RULE_typeSuffix = 95, 
		RULE_atomicType = 96, RULE_primitiveType = 97, RULE_functionType = 98, 
		RULE_uncertainType = 99, RULE_arrayKind = 100, RULE_classType = 101, RULE_classTypePart = 102, 
		RULE_typeArguments = 103, RULE_modifier = 104, RULE_classOrInterfaceModifier = 105, 
		RULE_lambdaExpression = 106, RULE_lambdaParameters = 107, RULE_lambdaParameterList = 108, 
		RULE_lambdaParameter = 109, RULE_lambdaBody = 110, RULE_annotation = 111, 
		RULE_elementValuePairs = 112, RULE_elementValuePair = 113;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "packageDeclaration", "importDeclaration", "topLevTypeDecl", 
			"typeDeclaration", "classDeclaration", "initParameter", "classBody", 
			"typeList", "classBodyDeclaration", "staticBlock", "enumDeclaration", 
			"enumConstants", "enumConstant", "enumBodyDeclarations", "interfaceDeclaration", 
			"interfaceBody", "interfaceBodyDeclaration", "interfaceMemberDeclaration", 
			"interfaceMethodDeclaration", "interfaceMethodModifier", "memberDeclaration", 
			"fieldDeclaration", "methodDeclaration", "typeParameters", "qualifiedNameList", 
			"qualifiedName", "typeParameter", "formalParameters", "formalParameterList", 
			"formalParameter", "methodBody", "block", "statement", "localVariableDeclaration", 
			"forControl", "loopVariable", "loopVariableDeclarators", "loopVariableDeclarator", 
			"loopVariableUpdates", "loopVariableUpdate", "anonClassExpr", "newArray", 
			"arrayInitializer", "variableInitializer", "catchClause", "catchFields", 
			"catchField", "catchValue", "branchCase", "switchLabel", "parExpression", 
			"expressionList", "expression", "assignment", "assignmentSuffix", "ternary", 
			"disjunction", "conjunction", "range", "bitor", "bitand", "bitxor", "equality", 
			"equalitySuffix", "relational", "relationalSuffix", "isExpr", "isSuffix", 
			"typePtn", "shift", "shiftSuffix", "additive", "additiveSuffix", "multiplicative", 
			"multiplicativeSuffix", "asExpr", "prefixExpr", "prefixOp", "postfixExpr", 
			"postfixSuffix", "callSuffix", "indexingSuffix", "selectorSuffix", "primaryExpr", 
			"arguments", "identifier", "literal", "integerLiteral", "floatLiteral", 
			"typeOrVoid", "type", "unionType", "intersectionType", "postfixType", 
			"typeSuffix", "atomicType", "primitiveType", "functionType", "uncertainType", 
			"arrayKind", "classType", "classTypePart", "typeArguments", "modifier", 
			"classOrInterfaceModifier", "lambdaExpression", "lambdaParameters", "lambdaParameterList", 
			"lambdaParameter", "lambdaBody", "annotation", "elementValuePairs", "elementValuePair"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'abstract'", "'bool'", "'case'", "'default'", "'catch'", "'string'", 
			"'class'", "'bean'", "'null'", "'package'", "'import'", "'password'", 
			"'float'", "'double'", "'else'", "'enum'", "'finally'", "'for'", "'if'", 
			"'is'", "'byte'", "'short'", "'int'", "'long'", "'char'", "'interface'", 
			"'native'", "'new'", "'priv'", "'prot'", "'pub'", "'return'", "'static'", 
			"'super'", "'switch'", "'this'", "'throw'", "'time'", "'throws'", "'try'", 
			"'void'", "'while'", "'do'", "'any'", "'never'", "'deleted'", "'fn'", 
			"'value'", "'val'", "'var'", "'as'", "'in'", "'continue'", "'break'", 
			"'temp'", "'='", "'>'", "'<'", "'!'", "'!!'", "'~'", "'?'", "':'", "'=='", 
			"'<='", "'>='", "'!='", "'&&'", "'||'", "'++'", "'--'", "'+'", "'-'", 
			"'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'+='", "'-='", "'*='", "'/='", 
			"'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", "'>>>='", "'('", "')'", 
			"'{'", "'}'", "'['", "']'", "';'", "','", "'.'", "'->'", "'::'", "'@'", 
			"'...'", null, null, null, null, null, null, null, null, null, null, 
			"'[r]'", "'[]'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ABSTRACT", "BOOL", "CASE", "DEFAULT", "CATCH", "STRING", "CLASS", 
			"BEAN", "NULL", "PACKAGE", "IMPORT", "PASSWORD", "FLOAT", "DOUBLE", "ELSE", 
			"ENUM", "FINALLY", "FOR", "IF", "IS", "BYTE", "SHORT", "INT", "LONG", 
			"CHAR", "INTERFACE", "NATIVE", "NEW", "PRIV", "PROT", "PUB", "RETURN", 
			"STATIC", "SUPER", "SWITCH", "THIS", "THROW", "TIME", "THROWS", "TRY", 
			"VOID", "WHILE", "DO", "ANY", "NEVER", "DELETED", "FN", "VALUE", "VAL", 
			"VAR", "AS", "IN", "CONTINUE", "BREAK", "TEMP", "ASSIGN", "GT", "LT", 
			"BANG", "BANGBANG", "TILDE", "QUESTION", "COLON", "EQUAL", "LE", "GE", 
			"NOTEQUAL", "AND", "OR", "INC", "DEC", "ADD", "SUB", "MUL", "DIV", "BITAND", 
			"BITOR", "CARET", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
			"AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", 
			"RSHIFT_ASSIGN", "URSHIFT_ASSIGN", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
			"LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "ARROW", "COLONCOLON", "AT", 
			"ELLIPSIS", "DECIMAL_LITERAL", "HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL", 
			"FLOAT_LITERAL", "HEX_FLOAT_LITERAL", "BOOL_LITERAL", "CHAR_LITERAL", 
			"STRING_LITERAL", "TEXT_BLOCK", "R", "RW", "IDENTIFIER", "WS", "COMMENT", 
			"LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KiwiParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KiwiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompilationUnitContext extends ParserRuleContext {
		public PackageDeclarationContext packageDeclaration() {
			return getRuleContext(PackageDeclarationContext.class,0);
		}
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<TopLevTypeDeclContext> topLevTypeDecl() {
			return getRuleContexts(TopLevTypeDeclContext.class);
		}
		public TopLevTypeDeclContext topLevTypeDecl(int i) {
			return getRuleContext(TopLevTypeDeclContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiwiParserListener ) ((KiwiParserListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiwiParserListener ) ((KiwiParserListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiwiParserVisitor ) return ((KiwiParserVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(229);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PACKAGE) {
				{
				setState(228);
				packageDeclaration();
				}
			}

			setState(234);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(231);
				importDeclaration();
				}
				}
				setState(236);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(238); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(237);
				topLevTypeDecl();
				}
				}
				setState(240); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 36310284410880386L) != 0) || _la==AT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageDeclarationContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(KiwiParser.PACKAGE, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public PackageDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiwiParserListener ) ((KiwiParserListener)listener).enterPackageDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiwiParserListener ) ((KiwiParserListener)listener).exitPackageDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiwiParserVisitor ) return ((KiwiParserVisitor<? extends T>)visitor).visitPackageDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageDeclarationContext packageDeclaration() throws RecognitionException {
		PackageDeclarationContext _localctx = new PackageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(242);
			match(PACKAGE);
			setState(243);
			qualifiedName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclarationContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(KiwiParser.IMPORT, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiwiParserListener ) ((KiwiParserListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiwiParserListener ) ((KiwiParserListener)listener).exitImportDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiwiParserVisitor ) return ((KiwiParserVisitor<? extends T>)visitor).visitImportDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(245);
			match(IMPORT);
			setState(246);
			qualifiedName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevTypeDeclContext extends ParserRuleContext {
		public TypeDeclarationContext typeDeclaration() {
			return getRuleContext(TypeDeclarationContext.class,0);
		}
		public List<ClassOrInterfaceModifierContext> classOrInterfaceModifier() {
			return getRuleContexts(ClassOrInterfaceModifierContext.class);
		}
		public ClassOrInterfaceModifierContext classOrInterfaceModifier(int i) {
			return getRuleContext(ClassOrInterfaceModifierContext.class,i);
		}
		public TopLevTypeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevTypeDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiwiParserListener ) ((KiwiParserListener)listener).enterTopLevTypeDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiwiParserListener ) ((KiwiParserListener)listener).exitTopLevTypeDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiwiParserVisitor ) return ((KiwiParserVisitor<? extends T>)visitor).visitTopLevTypeDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevTypeDeclContext topLevTypeDecl() throws RecognitionException {
		TopLevTypeDeclContext _localctx = new TopLevTypeDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_topLevTypeDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(251);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 36310284343705602L) != 0)) {
				{
				{
				setState(248);
				classOrInterfaceModifier();
				}
				}
				setState(253);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(254);
			typeDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDeclarationContext extends ParserRuleContext {
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public EnumDeclarationContext enumDeclaration() {
			return getRuleContext(EnumDeclarationContext.class,0);
		}
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiwiParserListener ) ((KiwiParserListener)listener).enterTypeDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiwiParserListener ) ((KiwiParserListener)listener).exitTypeDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiwiParserVisitor ) return ((KiwiParserVisitor<? extends T>)visitor).visitTypeDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
